--- a/Assignment2_Jupyter.ipynb
+++ b/Assignment2_Jupyter.ipynb
@@ -419,7 +419,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Hyperparameter Tuning (Optional, you can do manual hyperparameter adjustment as well. No panelty.)"
+        "Hyperparameter Tuning (you can do manual hyperparameter adjustment as well with No panelty.)"
       ],
       "metadata": {
         "id": "fT5DHyezEM-_"
